# idea_paraphrase_refinement

./: .gitignore  README.md  pyproject.toml  requirements.txt
knowledge/: company_guidelines.md  thotron_knowledge_base.md  user_preference.txt
output/: 1.offensive_segments_report.md  2.mitigated_tone_report.md  3.restructured_idea_report.md  4.key_points_report.md  5.semantic_preservation_report.md  6.relevance_evaluation_report.md  7.final_refined_idea.md
src/idea_paraphrase_refinement/: crew.py  main.py
src/idea_paraphrase_refinement/config/: agents.yaml  kb.yaml  tasks.yaml
